@@ -4,6 +4,8 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.logging.Logger;
@@ -261,9 +263,10 @@ public class VOElementFactory {
         URL httpUrl;
         if ( uri.toLowerCase().startsWith( "http" ) ) {
             try {
-                httpUrl = new URL( uri );
+                httpUrl = new URI( uri ).toURL();
             }
-            catch ( MalformedURLException e ) {
+            catch ( MalformedURLException | URISyntaxException
+                                          | IllegalArgumentException e ) {
                 httpUrl = null;
             }
         }
